--- a/styles/style-product.css
+++ b/styles/style-product.css
@@ -5,7 +5,7 @@
 }
 
 .products {
-    padding: 120px 98px;
+    padding: 120px 98px 90px 98px;
 }
 
 .products__featured {
@@ -18,6 +18,9 @@
     border-bottom: 3px solid transparent;
 }
 
+.products__featured:hover {
+    color: #212121;
+}
 .products__featured--active {
     color: #212121;
     border-bottom: 3px solid #212121;
@@ -37,15 +40,35 @@
     padding-right: 20px;
 }
 
+.products__catalog:hover {
+    opacity: 0.7;
+}
+
 .products__list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.product__list--exclusives .product{
+    width: 370px;
+    height: 370px;
 }
 
 .product {
     width: 270px;
     height: 270px;
     position: relative;
+    margin-bottom: 30px;
+}
+
+.product__img {
+    width: 100%;
+    height: 100%;
+}
+
+.product:hover {
+    box-shadow: 0 0 20px rgba(0,0,0,0.25);
 }
 
 .product:hover .product__hover {
@@ -92,4 +115,11 @@
     font-size: 14px;
     font-weight: 300;
     line-height: 21.91px;
+}
+
+h2.products__title {
+    color: #212121;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 14px;
 }
